# git-credential-github-app-auth

./: .envrc  .envrc.private.example  .gitignore  Cargo.toml  LICENSE  README.md  deny.toml
.github/workflows/: actions.yaml
src/: agent.rs  main.rs  parser.rs  token.rs
