[package]
name = "git-credential-github-app-auth"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.23"
clap = { version = "4.1.4", features = ["derive"] }
clap-verbosity-flag = "2.0.0"
env_logger = "0.10.0"
futures-util = "0.3.26"
jsonwebtoken = "8.2.0"
log = "0.4.17"
octocrab = "0.18.1"
reqwest = "0.11.14"
serde = "1.0.152"
serde_json = "1.0.92"
tokio = { version = "1.24.2", features = ["rt-multi-thread", "io-std", "macros", "signal", "sync"] }
tokio-util = { version = "0.7.4", features = ["codec"] }

# Config for minimal binary size
# [profile.release]
# strip = true  # Automatically strip symbols from the binary.
# opt-level = "z"  # Optimize for size.
# lto = true
# codegen-units = 1
# panic = "abort"
