[package]
name = "git-credential-github-app-auth"
version = "0.2.0"
edition = "2021"
authors = ["Simon Westphahl <simon@westphahl.net>"]
license = "MIT"
description = "Git credential helper using GitHub App authentication to provide Github tokens as credentials to Git."
readme = "README.md"
homepage = "https://github.com/westphahl/git-credential-github-app-auth"
repository = "https://github.com/westphahl/git-credential-github-app-auth"
keywords = ["cli", "git", "github", "git-credential"]
categories = ["command-line-utilities", "authentication"]
exclude = ["deny.toml", ".*"]

[dependencies]
anyhow = "1.0.69"
chrono = { version = "0.4.23", default-features = false, features = ["serde", "clock"] }
clap = { version = "4.1.4", features = ["derive"] }
clap-verbosity-flag = "2.0.0"
ctrlc = { version = "3.2.5", features = ["termination"] }
env_logger = "0.10.0"
jsonwebtoken = "8.2.0"
log = "0.4.17"
serde = "1.0.152"
serde_json = "1.0.92"
ureq = { version = "2.6.2", features = ["json"] }

# Config for minimal binary size
# [profile.release]
# strip = true  # Automatically strip symbols from the binary.
# opt-level = "z"  # Optimize for size.
# lto = true
# codegen-units = 1
# panic = "abort"
